--- a/package.json
+++ b/package.json
@@ -3,10 +3,8 @@
   "private": true,
   "dependencies": {
     "@babel/preset-react": "^7.14.5",
-    "@prettier/plugin-ruby": "^1.6.0",
     "@rails/webpacker": "4.3.0",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
-    "prettier": "^2.3.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -16,6 +14,10 @@
     "webpack-cli": "^3.3.12"
   },
   "devDependencies": {
-    "webpack-dev-server": "^3.11.2"
+    "eslint": "^7.29.0",
+    "prettier": "^2.3.1",
+    "prettier-eslint": "^12.0.0",
+    "webpack-dev-server": "^3.11.2",
+    "@prettier/plugin-ruby": "^1.6.0"
   }
 }
